--- a/compose.yaml
+++ b/compose.yaml
@@ -6,5 +6,5 @@ services:
       dockerfile: ./Dockerfile
     environment:
       NODE_ENV: production
-    ports:
-      - 3000:3000
+    # ports:
+    #   - 3000:3000
